@@ -34,6 +34,9 @@ Changes with Apache 2.4.11
   *) mod_lua: Don't quote Expires and Path values. PR 56734.
      [Keith Mashinter, <kmashint yahoo com>]
 
+  *) mod_authz_core: Allow <AuthzProviderAlias>'es to be seen from auth
+     stanzas under virtual hosts. PR 56870. [Eric Covener]
+
 Changes with Apache 2.4.10
 
   *) SECURITY: CVE-2014-0117 (cve.mitre.org)
